--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+/* DJM make all this go away - just temp framework */
 /* W3.CSS 4.12 November 2018 by Jan Egil and Borge Refsnes */
 html {
   box-sizing: border-box;
